--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,11 @@
 html,
 body {
   margin: 0;
-  
+
 }
 
 canvas {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   display: block;
 }
